--- a/Agência/css/estilo.css
+++ b/Agência/css/estilo.css
@@ -22,12 +22,12 @@ body{
 .logo{
     flex:20%;
     margin-left:10%;
-     /* border:1px solid red;*/
+     /* border:1px solid red;  */
     text-align: left;
 }
 
 .logo h1{
-
+    font-family: 'Lobster', cursive;
     color:#180F4A;
     font-size:34px;
 }
